// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSONRPCClientProvider getActions 1`] = `
Array [
  Object {
    "method": "getactions",
    "params": Array [
      Object {
        "scriptHash": undefined,
      },
    ],
  },
]
`;

exports[`JSONRPCClientProvider getActions 2`] = `
Array [
  Object {
    "method": "getactions",
    "params": Array [
      Object {
        "scriptHash": "0xcef0c0fdcfe7838eff6ff104f9cdec2922297537",
      },
    ],
  },
]
`;

exports[`JSONRPCClientProvider getAllStorage 1`] = `
Array [
  Object {
    "method": "getallstorage",
    "params": Array [
      "0xcef0c0fdcfe7838eff6ff104f9cdec2922297537",
    ],
  },
]
`;

exports[`JSONRPCClientProvider getClaimAmount 1`] = `
Array [
  Object {
    "method": "getclaimamount",
    "params": Array [
      "0xc56f33fc6ecfcd0c225c4ab356fee59390af8560be0e930faebe74a6daff7c9b",
      0,
    ],
  },
]
`;

exports[`JSONRPCClientProvider getOutput 1`] = `
Array [
  Object {
    "method": "getoutput",
    "params": Array [
      "0xc56f33fc6ecfcd0c225c4ab356fee59390af8560be0e930faebe74a6daff7c9b",
      0,
    ],
  },
]
`;

exports[`JSONRPCClientProvider testInvocation 1`] = `
Array [
  Object {
    "method": "testinvocation",
    "params": Array [
      "00",
    ],
  },
]
`;
